Improved adding machines. Introduced Machine Tests.

--- a/src/main/webapp/lab/administration.xhtml
+++ b/src/main/webapp/lab/administration.xhtml
@@ -20,9 +20,12 @@
                                         <p:commandButton  styleClass="linkButton" ajax="false" value="Tubes" action="/lab/investigation_tube" onclick="onSubmitButton();" />
                                         <p:commandButton  styleClass="linkButton" ajax="false" value="Speciman" action="/lab/investigation_speciman" onclick="onSubmitButton();" />
                                         <p:commandButton  styleClass="linkButton" ajax="false" value="Investigations" action="/lab/investigation" onclick="onSubmitButton();" />
-                                        <p:commandButton  styleClass="linkButton" ajax="false" value="Machines" action="/lab/machine" onclick="onSubmitButton();" />
+                                        <p:commandButton  styleClass="linkButton" ajax="false" value="Analyzers" action="/lab/machine" onclick="onSubmitButton();" />
+                                        <p:commandButton  styleClass="linkButton" ajax="false" value="Analyzer Tests" action="/lab/analyzer_test" onclick="onSubmitButton();" />
+                                        
                                         <p:commandButton  styleClass="linkButton" ajax="false" value="Investigation Fees" action="/lab/investigation_fee" onclick="onSubmitButton();" rendered="#{webUserController.hasPrivilege('LabInvestigationFee')}"/>
                                         <p:commandButton  styleClass="linkButton" ajax="false" value="Replaceable Investigations" action="/lab/replaceable_ix" onclick="onSubmitButton();" />
+                                    
                                     </h:panelGrid>
                                 </p:panel>
 
