--- a/src/main/webapp/dataAdmin/admin_data_administration.xhtml
+++ b/src/main/webapp/dataAdmin/admin_data_administration.xhtml
@@ -83,6 +83,7 @@
                                 <p:commandLink ajax="false" value="21. Store Item Code Set By Category Wise"  action="list_store"/>
                                 <p:commandLink ajax="false" value="22. Duplicated Bill Numbers By Bill Type"  action="admin_all_bill_type_bills_1"/>
                                 <p:commandLink ajax="false" value="23. Remove Entered Lab Report"  action="/dataAdmin/lab_search_for_remove_enterd_report.xhtml"/>
+                                <p:commandLink ajax="false" value="24. Remove Entered Investigations without a department"  action="#{investigationController.deleteIxWithoutIxAndFixReportedAs}"/>
 
                             </p:panelGrid>
 
