--- a/src/main/webapp/lab/administration.xhtml
+++ b/src/main/webapp/lab/administration.xhtml
@@ -22,8 +22,8 @@
                                         <p:commandButton  styleClass="linkButton" ajax="false" value="Investigations" action="/lab/investigation" onclick="onSubmitButton();" />
                                         <p:commandButton  styleClass="linkButton" ajax="false" value="Analyzers" action="/lab/machine" onclick="onSubmitButton();" />
                                         <p:commandButton  styleClass="linkButton" ajax="false" value="Analyzer Tests" action="/lab/analyzer_test" onclick="onSubmitButton();" />
-                                         <p:commandButton  styleClass="linkButton" ajax="false" value="Sample Components" action="/lab/analyzer_test" onclick="onSubmitButton();" />
-                                        <p:commandButton  styleClass="linkButton" ajax="false" value="Investigation Fees" action="/lab/sample_component" onclick="onSubmitButton();" rendered="#{webUserController.hasPrivilege('LabInvestigationFee')}"/>
+                                         <p:commandButton  styleClass="linkButton" ajax="false" value="Sample Components" action="/lab/sample_component" onclick="onSubmitButton();" />
+                                        <p:commandButton  styleClass="linkButton" ajax="false" value="Investigation Fees" action="/lab/investigation_fee" onclick="onSubmitButton();" rendered="#{webUserController.hasPrivilege('LabInvestigationFee')}"/>
                                         <p:commandButton  styleClass="linkButton" ajax="false" value="Replaceable Investigations" action="/lab/replaceable_ix" onclick="onSubmitButton();" />
                                     
                                     </h:panelGrid>
